# yolocc

./: .gitignore  DATA_GUIDE.md  MAINTENANCE.md  Makefile  NEXT_STEPS.md  README.md  demo.py  launch.py  pyproject.toml  requirements.txt  start.bat
.github/workflows/: ci.yml
configs/: garbage.yaml  household37_future.yaml  template_object.yaml  train_cfg.yaml
data/template/: README.md
deploy/: CMakeLists.txt  app.py  ncnn_deploy.cpp  opencv_deploy.py
docker/: Dockerfile  docker-compose.yml
scripts/: download_real_dataset.py  prepare_dataset.py  run_pipeline.py
src/: __init__.py  __main__.py  api.py  benchmark.py  cli.py  config.py  export_model.py  inference.py  logger.py  train.py  validate.py  visualize.py
tests/: test_api.py  test_config.py  test_download_dataset.py  test_export.py  test_inference.py
weights/: model_card.md
